# d2dtracker_rl

./: .gitmodules  README.md  RESULTS.md  package.xml  requirements.txt  setup.cfg  setup.py
checkpoints/intercept/: eval_cv.txt
config/: curriculum.yaml  refine_tight.yaml  train_ppo_high_level.yaml  train_sac_low_level.yaml
config/mavros/: target_px4_config.yaml
d2dtracker_rl/: __init__.py  curriculum.py  d2d_actor.py  d2d_env.py  d2d_nn_module.py  d2d_rl_render_node.py  d2dtracker_training.py  evaluate.py  px4_reset.py  ros_interface.py  target_policy.py  test_d2d_node.py  test_gym.py  train.py  train_d2d_node.py  utils.py
d2dtracker_rl/aerogym_intercept/: env.py  evaluate_intercept.py  sim.py  task.py  train_intercept.py  worker.py
d2dtracker_rl/envs/: __init__.py  base_intercept_env.py  high_level_env.py  low_level_env.py
launch/: d2d_rl_render.launch.py  env.launch.py  evaluate.launch.py  test_d2d_simulation.launch.py  train_high_level.launch.py  train_low_level.launch.py  training_d2d_simulation.launch.py
runs/intercept/SAC_1/: events.out.tfevents.1781310680.riotu-System-Product-Name.2686861.0
runs/intercept/SAC_2/: events.out.tfevents.1781372953.riotu-System-Product-Name.2997606.0
runs/intercept/SAC_3/: events.out.tfevents.1781407056.riotu-System-Product-Name.3343058.0
runs/intercept/SAC_4/: events.out.tfevents.1781429927.riotu-System-Product-Name.3516856.0
runs/intercept/SAC_5/: events.out.tfevents.1781439865.riotu-System-Product-Name.3587090.0
