<?xml version="1.0"?>
<package format="3">
  <name>d2dtracker_rl</name>
  <version>0.1.0</version>
  <description>Reinforcement learning for D2DTracker drone simulations using ROS 2.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>mavros_msgs</depend>
  <depend>std_srvs</depend>

  <!-- External libraries -->
  <depend>torch</depend>  <!-- For PyTorch-based RL implementation -->
  <depend>numpy</depend>

  <!-- Gazebo integration -->
  <depend>gazebo_ros</depend>

  <!-- Python dependencies for reinforcement learning -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-stable-baselines3</exec_depend>  <!-- For stable-baselines3 -->
  <exec_depend>python3-gymnasium</exec_depend>           <!-- For gymnasium -->
  <exec_depend>python3-pip</exec_depend>                 <!-- Pip for any additional dependencies -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
