<?xml version="1.0"?>
<package format="3">
  <name>d2dtracker_rl</name>
  <version>0.2.0</version>
  <description>Reinforcement learning for drone-to-drone interception (Gymnasium + SB3).</description>
  <maintainer email="asmalbatati@hotmail.com">Abdulrahman S. Al-Batati</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>aerogym_px4</depend>
  <depend>std_srvs</depend>

  <!-- RL stack (stable-baselines3, gymnasium, tensorboard) is pip-installed;
       there is no apt package on Jazzy. See the package README for the command. -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
